modified images for crousel

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -81,7 +81,7 @@
     <!-- Started carousel -->
     <section class="hero-wrap degree-right js-fullheight">
         <div class="home-slider js-fullheight owl-carousel">
-            <div class="slider-item js-fullheight" style="background-image:url(../static/images/background1.jpg);">
+            <div class="slider-item js-fullheight" style="background-image:url(../static/images/D.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -105,7 +105,7 @@
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
                                         <h2 class="navbar-brand">{{t_lis[1]}}-<span
-                                                style="color:#d1002c; display:inline-block;">{{name}}</span></h2>
+                                                style="display:inline-block;">{{name}}</span></h2>
                                         <p>{{t_lis[2]}} - {{phone_number}}</p>
                                     </div>
                                 </div>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="slider-item js-fullheight"
-                style="background-image:url(../static/images/edited_vali2.jpg);">
+                style="background-image:url(../static/images/b3.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url(../static/images/Bg.jpg);">
+            <div class="slider-item js-fullheight" style="background-image:url(../static/images/as.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
