added link to profile page

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -40,7 +40,7 @@
                         <p>{{t_lis[2]}} - {{phone_number}}</p>
                         <p>{{t_lis[3]}} - {{t_lis[4]}}</p>
                         <p>{{t_lis[5]}} - {{city}}, {{state}}</p>
-                        <a href="profile.html">{{t_lis[7]}}</a>
+                        <a href="{{url_for('profile')}}">{{t_lis[7]}}</a>
                     </div>
                 </div>
             </div>
