modified styling of text fields

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Login V1</title>
+    <title>Profile</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -39,75 +39,34 @@
                     </div>
                 </label>
 
-                <form class="login100-form validate-form">
+                <div class="login100-form validate-form">
                     <span class="login100-form-title">
-                        Edit Profile
+                        Profile
                     </span>
 
-                    <div class="wrap-input100 validate-input" data-validate="Valid number is of 10 integers">
-                        <input class="input100" type="text" name="Phone_number" placeholder="Phone Number" onfocus="this.value=''" value="1234567890">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100" style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="Phone_number" style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">1234567890</p>
                         <span class="symbol-input100">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
                     </div>
 
-                    <div class="wrap-input100 validate-input" data-validate="Name is required">
-                        <input class="input100" type="text" name="name" placeholder="Full Name" onfocus="this.value=''" value="ooiiii">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100" style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="name" style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">ooiiii</p>
                         <span class="symbol-input100">
                             <i class="fa fa-user" aria-hidden="true"></i>
                         </span>
                     </div>
 
-                    <!-- <div class="wrap-input100">
-                        <input class="input100" type="text" name="Language" placeholder="Language" onfocus="this.value=''" value="English">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-language" aria-hidden="true"></i>
-                        </span>
-                    </div> -->
-
-                    <div class="wrap-input100">
-                        <input class="input100" type="text" name="Location" placeholder="Location" onfocus="this.value=''"
-                            value="Moon">
-                        <span class="focus-input100"></span>
+                    <div class="wrap-input100" style="background-color:rgb(238, 231, 231);border-radius:20px;padding-bottom:7px;padding-top:7px;">
+                        <p name="location" style="position: relative; left:70px;font-size:large;font-family:Verdana, Geneva, Tahoma, sans-serif;">Moon</p>
                         <span class="symbol-input100">
                             <i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
                     </div>
-
-                    <div class="wrap-input100" style="outline: none;">
-                        <select class="input100" name="Language" placeholder="Language">
-                            <option value="English">English</option>
-                            <option value="Hindi">Hindi</option>
-                            <option value="Punjabi">Punjabi</option>
-                            <option value="Marathi">Marathi</option>
-                        </select>
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-language" aria-hidden="true"></i>
-                        </span>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn">
-                                    Submit
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn">
-                                    Cancel
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-
-                </form>
+                    <br>
+                    <br>
+                </div>
             </div>
             <div class="wrap-login100 mt-5 pt-5">
                 <table id="customers">
