--- a/pro_farm/templates/shop_now.html
+++ b/pro_farm/templates/shop_now.html
@@ -123,8 +123,8 @@
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-setbg="../static/images/featured/feature-1.jpg">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+                                <li class="active"><a href="#"><i class="fa fa-heart"></i></a></li>
+                                <li class="active"><a href="#"><i class="fa fa-retweet"></i></a></li>
                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
